🔒 CRITICAL SECURITY FIX: Remove all hardcoded passwords and secrets
🚨 Security Issues Resolved:
- Removed hardcoded admin password 'Liron1136' from app/casino.py
- Removed hardcoded user password from .users/.liron.json
- Replaced hardcoded Grafana password 'casino123' with environment variable
- Removed hardcoded password from Kubernetes ConfigMap
- Updated all documentation to remove password references

🔐 Security Improvements:
- Added ADMIN_PASSWORD environment variable support
- Added GRAFANA_ADMIN_PASSWORD environment variable support
- Created Kubernetes secret for Grafana admin password
- Enhanced .gitignore to prevent sensitive file commits
- Updated SECURITY.md with comprehensive security guidelines
- Added security checklist and emergency response procedures

⚠️  BREAKING CHANGES:
- Admin password must now be set via ADMIN_PASSWORD environment variable
- Grafana password must be set via GRAFANA_ADMIN_PASSWORD environment variable
- Default passwords will not work - must configure environment variables

🛡️  Next Steps Required:
1. Set ADMIN_PASSWORD environment variable before deployment
2. Set GRAFANA_ADMIN_PASSWORD environment variable
3. Create Kubernetes secrets for production deployment
4. Review and follow updated SECURITY.md guidelines

This commit ensures no sensitive data is exposed in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,36 @@ logs/
 # Temporary files
 tmp/
 temp/
+
+# Sensitive data and credentials
+.env
+.env.local
+.env.*.local
+*.key
+*.pem
+id_rsa*
+*.p12
+*.pfx
+*.crt
+*.csr
+
+# User data directories
+app/.users/
+data/users.json
+data/balance_history.json
+
+# Local development files
+.vscode/settings.json
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
