--- a/infra/k8s/monitoring/grafana-deployment.yaml
+++ b/infra/k8s/monitoring/grafana-deployment.yaml
@@ -76,7 +76,10 @@ spec:
             - name: GF_SECURITY_ADMIN_USER
               value: admin
             - name: GF_SECURITY_ADMIN_PASSWORD
-              value: casino123
+              valueFrom:
+                secretKeyRef:
+                  name: grafana-admin-secret
+                  key: admin-password
             - name: GF_USERS_ALLOW_SIGN_UP
               value: "false"
       volumes:
