--- a/infra/k8s/configmap.yaml
+++ b/infra/k8s/configmap.yaml
@@ -1,12 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: casino-users
+  name: casino-config
+  namespace: casino
 data:
   users.json: |
-    {
-      "Liron": {
-        "password": "1136",
-        "balance": 1000
-      }
-    }
+    []
